# stark

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.md  Makefile  README.md  add-copyright-headers.sh  build.sh  conanfile.txt  debugir.sh  linux_setup.sh  main.st  post-install.sh  test.ir  test.ll  test.st
.github/workflows/: build.yml  cmake.yml  release.yml  test.yml
doc/: _coverpage.md  _sidebar.md  arrays.md  common-concepts.md  compiler.md  index.html  memory-management.md  modules.md  prism-stark.js  quickstart.md  structs.md
docs/: README.md  _coverpage.md  _sidebar.md  arrays.md  common-concepts.md  compiler.md  external-tools.md  index.html  interpreter.md  modules.md  quickstart.md  structs.md  testing.md
lang/: CMakeLists.txt  Cargo.toml  starkc.cpp
lang/ast/: ASTDeclarationExtractor.cpp  ASTDeclarationExtractor.h  ASTNode.cpp  ASTNode.h  ASTWriter.cpp  ASTWriter.h  CMakeLists.txt
lang/codeGen/: CMakeLists.txt  CodeGen.h  CodeGenBitcode.cpp  CodeGenBitcode.h  CodeGenBitcodeLinker.cpp  CodeGenBitcodeLinker.h  CodeGenChecker.cpp  CodeGenConstants.h  CodeGenFileContext.cpp  CodeGenFileContext.h  CodeGenFunctionHelper.cpp  CodeGenFunctionHelper.h  CodeGenIdentifierResolver.cpp  CodeGenIdentifierResolver.h  CodeGenMangler.cpp  CodeGenMangler.h  CodeGenOptimizer.cpp  CodeGenOptimizer.h  CodeGenTypeHelper.cpp  CodeGenTypeHelper.h  CodeGenVariable.cpp  CodeGenVariable.h  CodeGenVisitor.cpp  CodeGenVisitor.h
lang/compiler/: CMakeLists.txt  Compiler.h  CompilerModule.cpp  CompilerModule.h  CompilerModuleBuilder.cpp  CompilerModuleMapper.h  CompilerModuleResolver.h  CompilerSystemLinker.cpp  CompilerSystemLinker.h
lang/interpreter/: Interpreter.cpp
lang/parser/: StarkParser.cpp  parser.y  tokens.l
lang/src/: lib.rs
lang/util/: Logger.h  StringUtil.cpp  StringUtil.h  SystemUtil.cpp  SystemUtil.h  Util.h
logo/StarkLogo.amdn/: project.xml
runtime/: Array.cpp  CInterop.cpp  CMakeLists.txt  Conversion.cpp  IO.cpp  Memory.cpp  Memory.h  PrimaryTypes.cpp  Runtime.h  RuntimeTypes.h  String.cpp  String.h  Testing.cpp  Util.cpp
sample/: main.st  other.st  test.st
sample/test.mod/: test.st
src/: CMakeLists.txt  StarkConfig.h.in  ast.cc  ast.hh  builtin.cc  builtin.hh  codegen.cc  codegen.hh  location.hh  main.cpp  native.cc  native.cpp  node.hh  parser.cc  parser.hh  parser.y  stark.cc  stark.cpp  starkc.cpp  tokens.cc  tokens.l  version.h
src/ast/: AST.cpp  AST.h  ASTDeclarationExtractor.cpp  ASTDeclarationExtractor.h  ASTNode.cpp  ASTNode.h  ASTWriter.cpp  ASTWriter.h
src/codeGen/: BuiltIn.cpp  BuiltIn.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  CodeGenBitcode.cpp  CodeGenBitcode.h  CodeGenBitcodeLinker.h  CodeGenChecker.cpp  CodeGenChecker.h  CodeGenComplexType.cpp  CodeGenComplexType.h  CodeGenContext.cpp  CodeGenContext.h  CodeGenFileContext.cpp  CodeGenFileContext.h  CodeGenInterpreter.cpp  CodeGenInterpreter.h  CodeGenLogger.cpp  CodeGenLogger.h  CodeGenMangler.cpp  CodeGenMangler.h  CodeGenModuleLinker.cpp  CodeGenModuleLinker.h  CodeGenVariable.cpp  CodeGenVariable.h  CodeGenVisitor.cpp  CodeGenVisitor.h
src/codeGen/types/: CodeGenAnyType.cpp  CodeGenArrayComplexType.cpp  CodeGenBoolType.cpp  CodeGenBoolType.h  CodeGenComplexType.cpp  CodeGenComplexType.h  CodeGenDoubleType.cpp  CodeGenDoubleType.h  CodeGenIntType.cpp  CodeGenIntType.h  CodeGenPrimaryType.cpp  CodeGenPrimaryType.h  CodeGenStringComplexType.cpp
src/compiler/: CMakeLists.txt  Compiler.h  CompilerModule.cpp  CompilerModule.h  CompilerModuleBuilder.cpp  CompilerModuleBuilder.h  CompilerModuleLoader.cpp  CompilerModuleLoader.h  CompilerModuleMapper.cpp  CompilerModuleMapper.h  CompilerModuleResolver.cpp
src/interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.h  NewInterpreter.cpp  NewInterpreter.h
src/lang/: Lang.h
src/lang/ast/: AST.cpp  AST.h
src/lang/parser/: parser.y  tokens.l
src/parser/: CMakeLists.txt  StarkParser.cpp  StarkParser.h  parser.y  tokens.l
src/runtime/: CMakeLists.txt  Cast.cpp  Conversion.cpp  Convert.cpp  IO.cpp  Memory.cpp  Memory.h  Runtime.h  Testing.cpp  Time.cpp
src/util/: CMakeLists.txt  FileLocation.h  Logger.cpp  Logger.h  StringUtil.cpp  StringUtil.h  Util.h
stark/: Cargo.toml  build.rs
stark-lang/: Cargo.toml  build.rs
stark-lang/src/: lib.rs
stark-lang/src/ast/: constant.rs  folder.rs  folder_tests.rs  location.rs  log.rs  mod.rs  module.rs  module_tests.rs  node.rs  util.rs  util_tests.rs  visitor.rs
stark-lang/src/code_gen/: bitcode.rs  builder.rs  code_gen.rs  error.rs  mangler.rs  mangler_tests.rs  mod.rs  runtime.rs  test_util.rs  util.rs
stark-lang/src/compiler/: compiler.rs  error.rs  mod.rs  module.rs  module_tests.rs
stark-lang/src/parser/: error.rs  lexer.rs  mod.rs  parser.rs  parser_tests.rs  stark.lalrpop  token.rs
stark-lang/src/tools/: reporter.rs
stark-lang/src/typing/: error.rs  mod.rs  symbol.rs  symbol_table.rs  symbol_table_tests.rs  symbol_tests.rs  type_checker.rs  type_checker_tests.rs  type_registry.rs  type_registry_tests.rs  typing.rs
stark-lang/src/typing/check/: assign.rs  assign_tests.rs  call_expr.rs  call_expr_tests.rs  constant_expr.rs  constant_expr_tests.rs  expr.rs  expr_tests.rs  func_decl.rs  func_def.rs  func_def_tests.rs  import.rs  mod.rs  module.rs  name_expr.rs  name_expr_tests.rs  test_util.rs  var_decl.rs  var_decl_tests.rs
stark-lang/src/virtual_machine/: error.rs  mod.rs  virtual_machine.rs
stark-lang/tests/: mod.rs
stark-lang/tests/code_gen/: assign_tests.rs  call_expr_tests.rs  constant_expr_tests.rs  func_def_tests.rs  mod.rs  name_expr_tests.rs  runtime_tests.rs  stmts_tests.rs  var_decl_tests.rs
stark-runtime/: CMakeLists.txt  Cargo.toml  conanfile.txt  memory.c
stark-runtime/src/: lib.rs
stark/src/: main.rs
starklang/: Cargo.toml
starklang/src/: lib.rs
test/: CMakeLists.txt  comments.st  main.st  main.st.bc  scratchpad.st  scratchpad.st.old
test/arrays/: assignment.st  declaration.st
test/compiler/: module.st
tests/: CMakeLists.txt  scratchpad.st
tools/: CMakeLists.txt  Cargo.toml  StarkConfig.h.in  stark.cpp  starkc.cpp  starktest.cpp
(+138 files in other folders)
