[package]
name = "stark-lang"
version = "0.2.0"
edition = "2021"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = "0.19.7"
regex = "1"
num-bigint = "0.4.3"
num-traits = "0.2"
logos = "0.12.0"
#inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "6ab2b19e1b90be55fa4f9f056f29bd1ed557b990", features = ["llvm12-0"] }
codespan-reporting = "0.11.1"
